--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
 	<title>Welcome to An Old Slow Horese's Page</title>
 </head>
 <body>	
-
+	<img src="images/pic.jpeg/" alt="Welcome" width="300" height="300" longdesc="desc.txt" /></p>
+	
+	<img src="pic.jpeg" >
 	<p>
 		<h2>
 		A Citizen of the Universe
 		</h2>		
 	</p>
+		<br />
+			<br />
+				<br />
 	<h1>
 		<center>
 			<p>Welcome for, An Old Slow Horse</p>
