--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Welcome to An Old Slow Horese's Page</title>
 </head>
 <body>	
-	<img src="pic.jpeg" alt="Welcome" width="300" height="300" longdesc="desc.txt" /></p>
+	<img src="images/pic.jpeg" alt="Welcome" width="300" height="300" longdesc="desc.txt" /></p>
 	
 	<p>
 		<h2>
